...
    <item name="contact" type="id"/>
    <item name="wallet" type="id"/>
    <item name="set" type="id"/>

    <item name="content_notice" type="id"/>
    <item name="content_layout" type="id"/>
    <item name="bottom_layout" type="id"/>
    <item name="bottom_trash" type="id"/>
    <item name="bottom_notify" type="id"/>
    <item name="recycler_chat" type="id"/>
    <item name="notify" type="id"/>
    <item name="privacy" type="id"/>

    <!-- Message details -->
    <item name="img" type="id"/>
...
    <item name="include_emoji" type="id"/>
    <item name="include_1" type="id"/>
    <item name="include_2" type="id"/>
    <item name="include_3" type="id"/>
    <item name="include_4" type="id"/>

    <item name="toggle" type="id"/>
    <item name="top" type="id"/>
    <item name="mute" type="id"/>
    <item name="clear" type="id"/>
    <item name="map_gaode" type="id"/>
    <item name="count" type="id"/>
    <item name="save" type="id"/>
    <item name="join" type="id"/>
    <item name="delete" type="id"/>
    <item name="groupset_groupname" type="id"/>
...
