...
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/dp_10"
    android:id="@+id/lin_pop_orherlogin">

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_8px_ffffff"
        android:dividerHeight="@dimen/px_1"
        android:divider="@color/color_d1d5da"/>
    <!--shape_20px_e6f6f6f6-->
...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_8px_ffffff">
        <TextView
            android:id="@+id/tv_popup_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_57"
            android:gravity="center"
            android:text="@string/Common_Cancel"
            android:textColor="@color/color_007aff"
            android:textSize="@dimen/sp_18"/>
...
