...
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_8"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10">

        <RelativeLayout
            android:id="@+id/left_rela"
            android:layout_width="@dimen/dp_44"
            android:layout_height="@dimen/dp_44">

            <ImageView
                android:id="@+id/avater_rimg"
                android:layout_width="@dimen/dp_44"
...
